--- a/public/witz.html
+++ b/public/witz.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Witz</title>
-</head>
-<body>
-<p>Ihre Seite hier</p>
-<p>Immer über <a href="http://localhost:3000/witz.html">http://localhost:3000/witz.html</a>, sonst geht der Zugriff auf
-den Server nicht.</p>
-</body>
+    <link rel="stylesheet" href="stylesheets/style.css" />
+    <script type="module" src="scripts/index.js" defer></script>
+  </head>
+  <body id="root"></body>
 </html>
